Fix side-by-side images being too big in Edge

--- a/css/main.scss
+++ b/css/main.scss
@@ -441,6 +441,7 @@ a {
 
 img {
 	max-width: 100%;
+	min-width: 0;
 	display: block;
 }
 
